[gd_scene load_steps=6 format=2]

[ext_resource path="res://Car.gd" type="Script" id=1]
[ext_resource path="res://Wheel.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 0.5, 2 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.337255, 0.870588, 0.988235, 1 )
roughness = 0.31

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.5, 0.25, 1 )

[node name="Body" type="RigidBody"]
mass = 10.0
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.125, -1 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collision_mask = 4
script = ExtResource( 2 )
spring_strength = 250.0
default_dist_from_groud = 0.5
damping_strength = 25.0
car_body_path = NodePath("..")

[node name="RayCast2" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.125, 1 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collision_mask = 4
script = ExtResource( 2 )
spring_strength = 250.0
default_dist_from_groud = 0.5
damping_strength = 25.0
car_body_path = NodePath("..")

[node name="RayCast3" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, -0.125, 1 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collision_mask = 4
script = ExtResource( 2 )
spring_strength = 250.0
default_dist_from_groud = 0.5
damping_strength = 25.0
car_body_path = NodePath("..")

[node name="RayCast4" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, -0.125, -1 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collision_mask = 4
script = ExtResource( 2 )
spring_strength = 250.0
default_dist_from_groud = 0.5
damping_strength = 25.0
car_body_path = NodePath("..")

[connection signal="update_offset" from="RayCast" to="." method="_on_RayCast_update_offset"]
[connection signal="update_offset" from="RayCast2" to="." method="_on_RayCast2_update_offset"]
[connection signal="update_offset" from="RayCast3" to="." method="_on_RayCast3_update_offset"]
[connection signal="update_offset" from="RayCast4" to="." method="_on_RayCast4_update_offset"]
